--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body id="home">
     <!-- <nav class="navbar">
       <div class="container">
-        <h1 class="logo">A-C Project</h1>
+        <h1 class="logo">C-H Project</h1>
       </div>
     </nav> -->
     <header id="header">
         <img src="image.png" alt="a random image" id="header-img">
         <nav id="nav-bar">
-            <ul>
+            <ul id="nav-links">
                 <li><a href="#section-a" class="nav-link">Element 1</a></li>
-                <li><a href="#section-a" class="nav-link">Element 2</a></li>
-                <li><a href="#section-a" class="nav-link">Element 3</a></li>
+                <li><a href="#section-b" class="nav-link">Element 2</a></li>
+                <li><a href="#section-c" class="nav-link">Element 3</a></li>
             </ul>
         </nav>
+        <h1 class="logo">C-H Project</h1>
         <video src="video.mp4" id="video" controls>
-
 
         <section class="section-a" id="section-a">
             <form action="https://www.freecodecamp.com/email-submit" id="form">
